@startuml System.puml

class Book {
    - title: string
    - author: string
    - availability: bool
    - dueDate: string
    + DisplayInfo(): void
    + borrowBook(): void
    + returnBook(): void
    + bookAvailability(): bool
}

class ReferenceBook {
    + DisplayInfo(): void
    + bookAvailability(): bool // Always false
}

class User {
    - userName: string
    - pass: string
    - role: string
    - History: string[]
    - borrowedBooks: map<string, string>
    + authenticate(): bool
    + canBorrow(): bool
    + borrowBook(title: string): void
    + returnBook(title: string): void
    + checkOverdueBook(): void
    + displayHistory(): void
}

class Library {
    - Shelf: Book[]
    - Users: User[]
    + Add(book: Book): void
    + RemoveBook(title: string): void
    + SearchBook(title: string): Book
    + searchByKeyWord(keyword: string): Book[]
    + Display(): void
}

class Librarian {
    + manageBooks(): void
    + manageUsers(): void
}

ReferenceBook --|> Book
Library "1" o-- "*" Book
Library "1" o-- "*" User
User "1" -- "*" Book : borrows
Librarian --|> User

@enduml
